# maxpy-lang

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  genindex.html  install.html  objects.inv  searchindex.js  support.html  tutorial.html
docs/API/: API.html  maxobject.html  maxpatch.html  outlet.html
docs/_sources/: support.rst.txt  tutorial.rst.txt
docs/doctrees/: environment.pickle  index.doctree  indices.doctree  install.doctree  support.doctree  tutorial.doctree
docs/doctrees/API/: API.doctree  inlet.doctree  maxobject.doctree  maxpatch.doctree  outlet.doctree
docs/doctrees/topics/: ext_packages.doctree  linked_files.doctree  topics.doctree  unknown_objs.doctree
docs/source/: install.rst
maxpylang/: maxobject.py
maxpylang/tools/objfuncs/: instantiation.py
