[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxpylang"
version = "0.1.0"
description = "Python API for making MaxMSP patches."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT" 
authors = [
    {name = "Ranger Liu", email = "ranger.liu@columbia.edu"},
    {name = "Mark Santolucito", email = "msantolu@barnard.edu"},
]
dependencies = [
    "numpy>=1.22.0",
    "sphinx_rtd_theme",
    "tabulate",
]

[project.urls]
Homepage = "http://pypi.python.org/pypi/MaxPyLang/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["maxpylang*"]

